--- a/apps/data-extractor/package.json
+++ b/apps/data-extractor/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "start": "electron .",
     "dev": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.25.0",
   "devDependencies": {
-    "electron": "^40.2.1"
+    "electron": "^40.2.1",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jsdom": "^28.0.0"
   }
 }
