refactor: enhance data extraction pipeline and update jest configuration
- Updated jest configuration to include specific test match patterns for site readers and interactions.
- Modified main.js to support dynamic site extraction based on CLI arguments, improving flexibility for different sites.
- Enhanced logging for pipeline execution, including site configuration details and error handling.
- Refactored preload.js to manage IPC communication for executing pipeline steps, including interactions, readers, and writers.
- Removed outdated content and test files related to the previous event extraction implementation.

--- a/apps/data-extractor/package.json
+++ b/apps/data-extractor/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "electron .",
     "dev": "electron .",
-    "test": "jest"
+    "extract": "electron .",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
