--- a/apps/data-extractor/package.json
+++ b/apps/data-extractor/package.json
@@ -7,6 +7,7 @@
     "start": "electron .",
     "dev": "electron .",
     "extract": "electron .",
+    "extract:headless": "electron . --headless",
     "test": "jest",
     "test:watch": "jest --watch"
   },
