--- a/apps/data-extractor/sites/pe-no-carnaval/config.json
+++ b/apps/data-extractor/sites/pe-no-carnaval/config.json
@@ -19,15 +19,13 @@
   },
   "pipeline": [
     {
-      "type": "interaction",
-      "module": "interactions/load-all-events.js"
-    },
-    {
-      "type": "snapshot"
-    },
-    {
-      "type": "reader",
-      "module": "readers/extract-events.js"
+      "type": "parallel",
+      "concurrency": 30,
+      "module": "readers/extract-event-details.js",
+      "input": "output.json",
+      "itemsPath": "events",
+      "urlField": "url",
+      "output": "output-with-details.json"
     }
   ],
   "metadata": {
