feat: enhance data extraction capabilities with new snapshot feature and improved HTML document cleaning

--- a/apps/data-extractor/package.json
+++ b/apps/data-extractor/package.json
@@ -8,6 +8,7 @@
     "dev": "electron .",
     "extract": "electron .",
     "extract:headless": "electron . --headless",
+    "snapshot:url": "electron scripts/snapshot-url.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
