feat: add a site generator

--- a/apps/data-extractor/package.json
+++ b/apps/data-extractor/package.json
@@ -9,6 +9,7 @@
     "extract": "electron .",
     "extract:headless": "electron . --headless",
     "snapshot:url": "electron scripts/snapshot-url.js",
+    "generate:site": "node scripts/generate-site.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
